# ocr-llm-py

./: Assignment_FirstWork.docx  README.md  main.py  pyproject.toml
output/: 50597708-7709.p0.json  7.p0.json  generated_license_0.p0.json  generated_license_1.p0.json  generated_license_10.p0.json  generated_license_1003.p0.json  generated_license_1014.p0.json  generated_license_1023.p0.json  generated_license_1063.p0.json  generated_license_1071.p0.json  generated_license_1077.p0.json  generated_license_1099.p0.json  generated_license_1108.p0.json
src/: models.py  pipeline.py
src/utils/: llm.py  ocr.py
